WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49036
[chromium] fix getintidentifier-special-values.html using TestNetscapePlugIn
https://bugs.webkit.org/show_bug.cgi?id=49036
Summary
[chromium] fix getintidentifier-special-values.html using TestNetscapePlugIn
Tony Chang
Reported
2010-11-04 16:02:04 PDT
[chromium] fix getintidentifier-special-values.html using TestNetscapePlugIn
Attachments
Patch
(2.00 KB, patch)
2010-11-04 16:08 PDT
,
Tony Chang
no flags
Details
Formatted Diff
Diff
Patch
(5.39 KB, patch)
2010-11-18 13:23 PST
,
Tony Chang
no flags
Details
Formatted Diff
Diff
Patch
(6.24 KB, patch)
2010-11-22 11:57 PST
,
Tony Chang
abarth
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Tony Chang
Comment 1
2010-11-04 16:08:59 PDT
Created
attachment 73000
[details]
Patch
Tony Chang
Comment 2
2010-11-04 16:15:28 PDT
I talked to Ananta about this and he can't remember exactly why this change was needed. The test cases in the bug tracker are no longer valid because the sites mentioned (microsoft.com and msdn.microsoft.com) no longer use silverlight. I manually tested the following: -
http://joel.neubeck.net/2008/06/sl2b2-media-player-markers/
- a few sites linked from silverlight.net - netflix streaming
Tony Chang
Comment 3
2010-11-09 14:51:32 PST
Maybe jam or stuart can review this? I'm not sure who owns this code these days.
Stuart Morgan
Comment 4
2010-11-09 15:06:42 PST
I'm not familiar with this code, so I'm probably not a good reviewer. Does this test failing mean that Apple's WebKit returns a double? If so, I'm fine with this from the Mac standpoint certainly, but if both Gecko and Safari return ints this seems like it would be a dangerous change.
Tony Chang
Comment 5
2010-11-09 15:12:21 PST
(In reply to
comment #4
)
> I'm not familiar with this code, so I'm probably not a good reviewer. > > Does this test failing mean that Apple's WebKit returns a double? If so, I'm fine with this from the Mac standpoint certainly, but if both Gecko and Safari return ints this seems like it would be a dangerous change.
Safari returns a double and Firefox returns an int. We originally were matching Firefox, but this change makes us match Safari since it doesn't seem to be necessary anymore.
Stuart Morgan
Comment 6
2010-11-09 15:14:29 PST
As long as we're matching something else I'm fine with this. I mostly deal with the Mac though, where matching Safari is pretty much a guarantee existing plugins will work ;)
Tony Chang
Comment 7
2010-11-17 12:36:08 PST
Can someone review this? dglazkov? fishd?
John Abd-El-Malek
Comment 8
2010-11-17 12:42:57 PST
sorry just saw this. I'm not a WebKit reviewer. I'm also not sure why the code is like that. if it doesn't break any tests, try it :)
Adam Barth
Comment 9
2010-11-17 14:00:47 PST
Comment on
attachment 73000
[details]
Patch If JAM is ok with this change, it's fine with me.
Tony Chang
Comment 10
2010-11-17 14:16:42 PST
Committed
r72243
: <
http://trac.webkit.org/changeset/72243
>
David Levin
Comment 11
2010-11-17 20:51:09 PST
Rolled out here:
http://trac.webkit.org/changeset/72271
Seemed to cause a large set of Chromium layout tests to start failing.
David Levin
Comment 12
2010-11-17 20:59:45 PST
Comment on
attachment 73000
[details]
Patch Clearing r+ on bad patch and marking obsolete. We just went from 103 layout test failures on Win to 3 with this rolled out!
Tony Chang
Comment 13
2010-11-18 13:23:35 PST
Created
attachment 74285
[details]
Patch
Tony Chang
Comment 14
2010-11-18 13:27:01 PST
(In reply to
comment #11
)
> Rolled out here:
http://trac.webkit.org/changeset/72271
>
> Seemed to cause a large set of Chromium layout tests to start failing.
Sorry about that! I didn't realize this change could cause non-plugin tests to fail. Turns out our C++ bindings uses NPObject. This patch fixes the calls in DRT and
http://codereview.chromium.org/5209004/
fixes the calls in test_shell.
Tony Chang
Comment 15
2010-11-22 11:57:45 PST
Created
attachment 74581
[details]
Patch
Tony Chang
Comment 16
2010-11-22 11:59:28 PST
(In reply to
comment #15
)
> Created an attachment (id=74581) [details] > Patch
Updated to include drt_expectations.txt update since I've switched DRT to using the upstream TestNetscapePlugIn. Adam, can you review? The analogous change to test_shell went in here:
http://codereview.chromium.org/5209004/
Adam Barth
Comment 17
2010-11-29 14:13:11 PST
Comment on
attachment 74581
[details]
Patch Yay for testing. :)
Tony Chang
Comment 18
2010-11-30 15:56:04 PST
Committed
r72974
: <
http://trac.webkit.org/changeset/72974
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug