2010-11-30  Tony Chang  <tony@chromium.org>

Reviewed by Adam Barth.

        [chromium] fix get-int-identifier-special-values.html using TestNetscapePlugIn
        https://bugs.webkit.org/show_bug.cgi?id=49036

        No new tests: Covered by plugins/npruntime/get-int-identifier-special-values.html

        In http://codereview.chromium.org/11574, the forked chromium test
        plugin changed how it testGetIntIdentifier to work around a change
        caused by a silverlight specific plugin fix:
        http://codereview.chromium.org/11569/diff/1/2

        It's not clear to me that this change is needed anymore since
        silverlight has had multiple releases, testing without this patch
        works on a test windows build, and safari win seems to run silverlight
        without this either.  Since there's no test for this behavior, I'm
        rolling it out so we can match the upstream test.

        * bindings/v8/V8NPUtils.cpp:
        (WebCore::convertV8ObjectToNPVariant):
2010-11-30  Tony Chang  <tony@chromium.org>

        Reviewed by Adam Barth.

        [chromium] fix get-int-identifier-special-values.html using TestNetscapePlugIn
        https://bugs.webkit.org/show_bug.cgi?id=49036

        * DumpRenderTree/chromium/LayoutTestController.cpp: Use IsNumber instead of IsInt32
            for CppVariants.
        (LayoutTestController::cppVariantToBool):
        (LayoutTestController::cppVariantToInt32):
        (LayoutTestController::setDatabaseQuota):
        (LayoutTestController::evaluateInWebInspector):
        (LayoutTestController::setMockGeolocationError):

Canonical link: https://commits.webkit.org/63429@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72974 268f45cc-cd09-0410-ab3c-d52691b4dbfc